Bug 891944 - Move IDBCursor to WebIDL, r=janv