addon-sdk/source/test/test-indexed-db.js
@@ -8,7 +8,7 @@ let xulApp = require("sdk/system/xul-app");
 if (xulApp.versionInRange(xulApp.platformVersion, "16.0a1", "*")) {
 new function tests() {
 
-const { indexedDB, IDBKeyRange, DOMException, IDBCursor,
+const { indexedDB, IDBKeyRange, DOMException
         IDBOpenDBRequest, IDBRequest
       } = require("sdk/indexed-db");
 
@@ -22,7 +22,7 @@ exports["test indexedDB is frozen"] = function(assert){
 };
 
 exports["test db variables"] = function(assert) {
-  [ indexedDB, IDBKeyRange, DOMException, IDBCursor,
+  [ indexedDB, IDBKeyRange, DOMException
     IDBOpenDBRequest, IDBOpenDBRequest, IDBRequest
   ].forEach(function(value) {
     assert.notEqual(typeof(value), "undefined", "variable is defined");
